# corpus-introspect

./: Cargo.toml  LICENSE-APACHE  README.md
agent/: intent-card.json
src/: facets.rs  main.rs  model.rs  render.rs  runner.rs
tests/: acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac7.rs  mocks.rs  proptest_invariants.rs
tests/mocks/: ac6.rs
